Refactor book.controller.ts, add deleteBook endpoint
